--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "private": true,
   "homepage": "https://americool.github.io/",
   "dependencies": {
+    "@material-ui/core": "^3.2.0",
+    "@material-ui/icons": "^3.0.1",
+    "@types/react-redux": "^6.0.9",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts-ts": "3.1.0"
+    "react-redux": "^5.0.7",
+    "react-scripts-ts": "3.1.0",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
